fix viewport too small on mobile, scroll added items into view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,9 +21,15 @@ $foreground: map-get($theme, foreground);
 @include app-component-theme($theme);
 @include pointer-panel-theme($theme);
 
-html, body {
-  height: 100%;
-}
+  html,
+  body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+  }
 
 body {
   margin: 0;
